# zephyr-mymodule-base

./: CMakeLists.txt  Kconfig  Kconfig.home_assistant  Kconfig.openthread  Kconfig.watchdog
include/: ha.h  reset.h  watchdog.h
include/mymodule/base/: ha.h  mqtt.h  openthread.h
src/: ha.c  mqtt.c  openthread.c  reset.c  uid.c  watchdog.c
zephyr/: module.yml
